--- a/HostingService.Api/appsettings.json
+++ b/HostingService.Api/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=reservas;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
 
