--- a/HostingService.Api/appsettings.Development.json
+++ b/HostingService.Api/appsettings.Development.json
@@ -7,6 +7,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=reservas;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "Issuer": "",
+    "Audience": "",
+    "Secret": "Q2f@8W!sDx#4eV7l5G$p9PjLc^6vJtK1",
+    "expires": 10
   }
 }
-
