--- a/HostingService.Infra/HostingService.Infra.csproj
+++ b/HostingService.Infra/HostingService.Infra.csproj
@@ -37,5 +37,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HostingService.Domain\HostingService.Domain.csproj" />
+    <ProjectReference Include="..\HostingService.Shared\HostingService.Shared.csproj" />
   </ItemGroup>
 </Project>
