--- a/HostingService.Api/appsettings.Development.json
+++ b/HostingService.Api/appsettings.Development.json
@@ -4,6 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=reservas;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
   }
 }
 
