--- a/HostingService.Domain/HostingService.Domain.csproj
+++ b/HostingService.Domain/HostingService.Domain.csproj
@@ -15,14 +15,14 @@
     <None Remove="User\" />
     <None Remove="User\Event\" />
     <None Remove="User\ValueObject\" />
-    <None Remove="Services\" />
+    <None Remove="ValueObjects\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Abstractions\" />
     <Folder Include="User\" />
     <Folder Include="User\Event\" />
     <Folder Include="User\ValueObject\" />
-    <Folder Include="Services\" />
+    <Folder Include="ValueObjects\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.1.1" />
