--- a/src/HostingService.Api/HostingService.Api.csproj
+++ b/src/HostingService.Api/HostingService.Api.csproj
@@ -30,4 +30,8 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Controllers\WeatherForecastController.cs" />
+    <Compile Remove="Models\AuthResponse.cs" />
+  </ItemGroup>
 </Project>
