--- a/src/HostingService.Api/appsettings.Development.json
+++ b/src/HostingService.Api/appsettings.Development.json
@@ -9,9 +9,9 @@
     "DefaultConnection": "Server=localhost,1433;Database=reservas;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
   },
   "JwtSettings": {
-    "Issuer": "",
-    "Audience": "",
-    "Secret": "Q2f@8W!sDx#4eV7l5G$p9PjLc^6vJtK1",
-    "expires": 10
+    "Secret": "Q2f@8W!sDx#4eV7l5G$p9PjLc^6vJtK1", // Chave secreta para a assinatura do token
+    "ExpirationInHours": 2, // Tempo de expiração do token em horas
+    "Issuer": "MeuSistema", // Emissor do token
+    "ValidIn": "https://localhost" // Público alvo do token (URL do seu sistema)
   }
 }
